[package]
name = "megamap"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
ansi_colours = "1.0.1"
anyhow = "1.0.31"
clap = "2.33.1"
crossterm = "0.17.7"
itertools = "0.9.0"
lazy_static = "1.4.0"
structopt = "0.3.15"
syntect = "4.2.0"
unicode-width = "0.1.8"
